public/styles.css
/* ... */
.folder-title {
    font-size: 1.6rem;
    font-weight: 600;
}
.folder-controls {
    display: flex;
    justify-content: start;
    align-items: stretch;
    gap: 8px;
}
.folder-controls > * {
    border: none;
    background-color: rgb(0,128,255);
    color: white;
    font-weight: 600;
    padding: 8px;
    border-radius: 4px;
    font: inherit;
    font-size: 1.1rem;
    scale: 1.0;
    transition: scale 0.075s ease-in-out;
}
.folder-controls > *:hover {
    background-color: rgb(0,150,255);
    cursor: pointer;
}
.folder-controls > *:active {
    scale: 0.95;
}
.btn-sharefolder {
    margin-left: auto;
    text-decoration: none;
}
.folder-content {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 4px;
}
.folder-content a {
    text-decoration: none;
}
.folder-item {
    border: 1px solid rgb(230,230,230);
    background-color: white;
    color: #303030;
    font-size: 1.15rem;
    padding: 0;
    height: 44px;
    border-radius: 4px;
    display: flex;
    justify-content: start;
    align-items: center;
    gap: 8px;
    outline: 2px solid rgb(0,150,255,0);
    transition: outline 0.05s ease-out;
}
.folder-link {
    flex: 1;
    height: 100%;
    padding: 4px 0px 4px 8px;
    display: flex;
    align-items: center;
    gap: 8px;
    color: inherit;
}
.folder-item:hover {
    outline: 2px solid rgb(0,150,255);
}
.folder svg {
    height: 20px;
    width: 20px;
}
.folder-item-control {
    height: 100%;
    padding: 4px;
    display: flex;
    gap: 4px;
}
.item-edit-button {
    margin-left: auto;
    display: block;
    height: 100%;
    aspect-ratio: 1;
    border: none;
    background-color: hsl(170deg 100% 27.5%);
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 4px;
}
.item-edit-button:hover {
    cursor: pointer;
    background-color: hsl(170deg 100% 32.5%);
}
.form-item-delete-button {
    height: 100%;
}
.item-delete-button {
    border: none;
    height: 100%;
    display: block;
    aspect-ratio: 1;
    background-color: red;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 4px;
}
.item-delete-button:hover {
    cursor: pointer;
    background-color: rgb(255,100,100);
}
.index-content {
    flex: 1;
    width: 100%;
    max-width: 600px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 16px;
}
.index-title {
    font-size: 2.5rem;
    font-weight: 700;
    color: rgb(30,30,30);
}
.index-info {
    font-size: 1.6rem;
    font-weight: 500;
}
.index-links {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;
}
.index-link {
    background-color: rgb(0,128,255);
    border-radius: 6px;
    color: white;
    font-size: 1.5rem;
    font-weight: 600;
    padding: 10px;
    text-decoration: none;
    width: 140px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.index-link:hover {
    background-color: rgb(30,150,255);
}
.index-login {
    background-color: white;
    color: #303030;
    border: 1px solid #ccc;
}
.index-login:hover {
    background-color: rgb(230,230,230,0.1);
}

html:has(.modal[open]), body:has(.modal[open]) {
    overflow: hidden;
}
.modals {
    z-index: 2001;
    position: fixed;
    left: 0;
    top: 0;
    width: 100dvw;
    height: 100dvh;
    background-color: transparent;
    padding: 1rem;

    display: grid;
    place-items: center;

    overflow: auto;
    pointer-events: none;
}
.modals:has(.modal[open]) {
    pointer-events: all;
}
.modal-backdrop {
    --transition_dur: 0.1s;

    pointer-events: none;
    position: fixed;
    left: 0;
    top: 0;
    width: 100dvw;
    height: 100dvh;
    background-color: rgb(0,0,0,0.15);
    opacity: 0;
    transition: opacity var(--transition_dur) ease-out;
}
.modal-backdrop:has(~.modal[open]) {
    pointer-events: all;
    opacity: 1;
}
.modal {
    position: relative;
    --transition_dur: 0.1s;

    width: 100%;
    max-width: 400px;
    min-width: 200px;
    height: fit-content;

    pointer-events: none;
    background-color: white;

    border-radius: 8px;
    padding: 12px;
    padding-top: 28px;

    translate: 0px 20px;
    opacity: 0;
    scale: 0.85;
    transition: 
        translate var(--transition_dur) ease-in-out, 
        scale var(--transition_dur) ease-in-out, 
        opacity var(--transition_dur) ease-in-out;

    font-size: 1.2rem;

    grid-row: 1;
    grid-column: 1;

    display: grid;
    gap: 8px;
}
.modal[open] {
    pointer-events: all;
    opacity: 1;
    translate: 0px 0px;
    scale: 1;
}
.modal label {
    display: grid;
    gap: 4px;
    font: inherit;
    font-size: 1.1rem;
}
.modal label input:not([type="file"], [type="date"]) {
    border: 1px solid #ccc;
    padding: 6px;
    border-radius: 4px;
    font: inherit;
}
.modal label input[type="file"] {
    opacity: 0;
    width: 0.1px;
    height: 0.1px;
    position: absolute;
}
.modal label:has(input[type="file"]):hover {
    cursor: pointer;
}
.input-file-button {
    background-color: rgb(0,128,255);
    color: white;
    font-size: 1.2rem;
    border-radius: 4px;
    padding: 8px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.input-file-button:hover {
    background-color: rgb(30,150,255);
}
.input-file-button:has(+input:focus) {
    outline: 2px solid black;
}
.input-file-info-array {
    display: flex;
    flex-direction: column;
    gap: 4px;
}
.input-file-info {
    display: flex;
    justify-content: space-between;
    align-items: start;
    font: inherit;
}
.input-file-info-size {
    text-wrap: nowrap;
    white-space: nowrap;

}
.input-file-errors {
    color: red;
}
.modal-title {
    position: absolute;
    top: 0;
    left: 32px;
    translate: 0 -50%;

    background-color: #303030;
    padding: 8px;
    border-radius: 6px;
    font-size: 1rem;

    font-size: 1.3rem;
    font-weight: 600;
    color: white;
}
/* ... */

